header-to-metadata/resources/envoy.yaml
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9000
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 9095
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/foo"
                route:
                  cluster: backend_service
              - match:
                  prefix: "/bar"
                route:
                  cluster: backend_service
              - match:
                  prefix: "/baz"
                route:
                  cluster: backend_service
          http_filters:
          - name: envoy.filters.http.wasm
            typed_config:
              "@type": type.googleapis.com/udpa.type.v1.TypedStruct
              type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
              value:
                config:
                  name: "htm"
                  root_id: "htm_root"
                  vm_config:
                    runtime: "envoy.wasm.runtime.v8"
                    vm_id: "htm_vm"
                    code:
                      local:
                        filename: "/usr/local/bin/add_header_filter.wasm"
                    configuration: {}
                    allow_precompiled: true
          - name: envoy.filters.http.header_to_metadata
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.header_to_metadata.v3.Config
              request_rules:
                - header: x-3scale-service-key
                  on_header_present:
                    metadata_namespace: 3scale
                    key: service_key
                    type: STRING
                  on_header_missing:
                    metadata_namespace: 3scale
                    key: service_key
                    value: '123456'
                    type: STRING
                  remove: false
                - header: x-3scale-application-key
                  on_header_present:
                    metadata_namespace: 3scale
                    key: application_key
                    type: STRING
                  on_header_missing:
                    metadata_namespace: 3scale
                    key: application_key
                    value: '123456'
                    type: STRING
                  remove: false
          - name: envoy.filters.http.wasm
            typed_config:
              "@type": type.googleapis.com/udpa.type.v1.TypedStruct
              type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
              value:
                config:
                  name: "htm"
                  root_id: "htm_root"
                  vm_config:
                    runtime: "envoy.wasm.runtime.v8"
                    vm_id: "htm_vm"
                    code:
                      local:
                        filename: "/usr/local/bin/metadata_filter.wasm"
                    configuration: {}
                    allow_precompiled: true
          - name: envoy.filters.http.router
            typed_config: {}
  clusters:
  - name: backend_service
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: backend_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: backend_service
                port_value: 8000
